@@ -67,7 +67,7 @@ EOF
    	 	print TEXOUT "\\end{document}\n";
 	    close TEXOUT;
 
-	    `cd $Tab::file_root/tmp; $Tab::latex_path $filename.tex; $Tab::latex_path $filename.tex; $Tab::dvipdfm_path $filename.dvi`;
+	    `cd $Tab::file_root/tmp; $Tab::latex_path $filename.tex; $Tab::latex_path $filename.tex; $Tab::latex_path $filename.tex; $Tab::dvipdfm_path $filename.dvi`;
 	    `cd $Tab::file_root/tmp; rm -f $filename.tex $filename.log $filename.dvi $filename.aux` if $Tab::hostname eq "www.tabroom.com"; 
 
 	    $m->redirect("$Tab::url_prefix/tmp/$filename.pdf");
