@@ -152,7 +152,13 @@
 
 				<a class="<% ($ojudge_group->id == $judge_group_id ) ? "dk" : "" %>blue block" 
 					href="/index/tourn/judges.mhtml?tourn_id=<% $tourn_id %>&judge_group_id=<% $ojudge_group->id %>">
-					<% $ojudge_group->name %>
+					<% $ojudge_group->name %> list
+				</a>
+
+				<a class="blue halfblock" href="/index/tourn/paradigms.mhtml?tourn_id=<% $tourn_id %>&judge_group_id=<% $ojudge_group->id %>">
+					<% $ojudge_group->abbr %> paradigms
+				</a><a class="blue halfblock" href="/index/tourn/paradigms_print.mhtml?tourn_id=<% $tourn_id %>&judge_group_id=<% $ojudge_group->id %>">
+					PDF
 				</a>
 
 %		}
