@@ -1,71 +1,108 @@
 <%args>
 	$tourn_id
+	$judge_group_id => undef
+	$account => undef
 </%args>
 <%init>
 
-	my $tourn = Tab::Tourn->retrieve($tourn_id);
+	my $tourn =  Tab::Tourn->retrieve($tourn_id);
+	my $judge_group =  Tab::JudgeGroup->retrieve($judge_group_id);
 
-	unless ($tourn->setting("publish_paradigms")) { 
-		$m->print("<p class=\"err\">The paradigms for this tournament have not been published</p>");
-		$m->abort;
-	}
+	Tab::JudgeGroup->set_sql( field_reports => "
+		select judge_group.* from judge_group, judge_group_setting
+		where judge_group.tourn = ?
+		and judge_group.id = judge_group_setting.judge_group
+		and judge_group_setting.tag = \"field_report\"
+		and judge_group_setting.value = 1
+		order by judge_group.name
+	");
 
-	my @groups = $tourn->groups;
+	my @judge_groups = Tab::JudgeGroup->search_field_reports($tourn->id);
+
+	$judge_group = $judge_groups[0] unless $judge_group;
+
+    my $webpage = Tab::Webpage->search( tourn => $tourn_id, special => "fields")->first;
 
 	my $switch;
 
 </%init>
 
-	<br />
+	<div class="left huge">
 
-	<table width="100%" cellpadding="0" cellspacing="0">
+		<span class="hugespan">
+			<h2>
+				<% $tourn->name %> 
+			</h2>
+		</span>
 
-		<tr>
-			<td width="100%">
-				<h2><% $tourn->name %> Judge Paradigms</h2>
-			</td>
-		
-			<td>
-				<form action="paradigms_prints.mhtml">
-				<input type="hidden" name="tourn_id" value="<% $tourn->id %>">
-				<input  type="submit" value="Printable Paradigms List">
-				</form>
-			</td>
+		<span class="medspan" style="vertical-align: top;">
+			<h4 style="text-align: right;">
+				<% $tourn->location %>  
+			</h4>
+		</span>
+
+		<br style="clear: both;">
+
+        <& tourn_header.mas, tourn => $tourn, account => $account &>
+
+%		if ($judge_group) { 
+
+%			my @judges = sort {$a->last cmp $b->last} $judge_group->judges(active => 1);
+
+%			foreach my $judge (@judges) { 
+
+%				next unless $judge->account && $judge->account->paradigm;
+%				my $paradigm = $judge->account->paradigm;
+%				$paradigm =~ s/font-size: x-small;//g;
+%				$paradigm =~ s/font-size: xx-small;//g;
+%				$paradigm =~ s/font-size: small;//g;
+%				$paradigm =~ s/font-size: medium;//g;
+%				$paradigm =~ s/font-size://g;
+
+				<span class="hugespan">
+					<h4><% $judge->first." ".$judge->last %> Paradigm </h4>
+				</span>
+
+				<span class="medspan" style="vertical-align: top;">
+					<h4 style="text-align: right;">
+%						if ( ($judge->obligation + $judge->hired) > 0) { 
+							<% $judge->obligation + $judge->hired %> rounds
+%						}
+					</h4>
+				</span>
 			
-		</tr>
+				<div class="paradigm">
+					<% $paradigm %>
+				</div>
 
-	</table>
-
-%	foreach my $group (sort {$a->name cmp $b->name} @groups) { 
-
-%		next unless $group->setting("ask_paradigms");
-
-		<h4><% $group->name %></h4>
-
-		<table  class="paradigm" cellpadding="5" cellspacing="1" width="100%">
-
-%		foreach my $judge (sort {$a->last cmp $b->last} $group->judges) { 
-
-%			next unless $judge->account && $judge->account->paradigm;
-
-			<tr <% ($switch++ % 2) ? "class=\"oddrow\"" : "class=\"evenrow\"" %>>	
-
-			<td valign="top" width="20%">
-				<b><% $judge->last.", ".$judge->first %></b>:
-				<br><% ($judge->school->id) ? $judge->school->name : "Hired" %>
-			</td>
-
-			<td class="smaller">
-				<p><% $judge->account->paradigm %></p>
-			</td>
-
-			</tr>
+%			}
 
 %		}
 
-	</table>
-%	}
+	</div>
 
-</p>
+	<div class="right small">
+	
+		<div class="sidenote">
 
-</div>
+			<h4>Judges</h4>
+
+%			foreach my $ojudge_group (sort {$a->name cmp $b->name} @judge_groups) { 
+
+				<a class="blue block" href="/index/tourn/judges.mhtml?tourn_id=<% $tourn_id %>&judge_group_id=<% $ojudge_group->id %>">
+					<% $ojudge_group->name %> list
+				</a>
+
+				<a class="<% ($ojudge_group->id == $judge_group_id ) ? "dk" : "" %>blue halfblock" 
+					href="/index/tourn/paradigms.mhtml?tourn_id=<% $tourn_id %>&judge_group_id=<% $ojudge_group->id %>">
+					<% $ojudge_group->abbr %> paradigms
+				</a><a class="blue halfblock" href="/index/tourn/paradigms_print.mhtml?tourn_id=<% $tourn_id %>&judge_group_id=<% $ojudge_group->id %>">
+					PDF
+				</a>
+
+%			}
+	
+		</div>
+
+	</div>
+
