@@ -1,88 +1,89 @@
-
 <%args>
 	$tourn_id
+	$judge_group_id => undef
+	$account  => undef
 </%args>
 <%init>
 
+	my $tourn =  Tab::Tourn->retrieve($tourn_id);
 
-	my $tourn = Tab::Tourn->retrieve($tourn_id);
+	my $tz = $account->tz if $account;
+	$tz = $tourn->tz unless $tz;
+	$tz = "UTC" unless $tz;
 
-    unless ($tourn->method->publish_paradigms == 1) {
-        $m->print("<p class=\"err\">The paradigms for this tournament have not been published.  Stop trying to mess around.</p>");
-        $m->abort;
-	}
-
-	my $circuit = $tourn->circuit;
 	my $now = DateTime->now;	
-	$now->set_time_zone($tourn->tz);
+	$now->set_time_zone($tz);
 
-	my $filename = $Tab::file_root."/tmp/paradigms-".$tourn_id."-".$now->epoch;
+	my $judge_group =  Tab::JudgeGroup->retrieve($judge_group_id);
 
-	my $garbage = `rm -f $filename.*`;
-	
-	open (TEXOUT, ">$filename.tex");
+	Tab::JudgeGroup->set_sql( field_reports => "
+		select judge_group.* from judge_group, judge_group_setting
+		where judge_group.tourn = ?
+		and judge_group.id = judge_group_setting.judge_group
+		and judge_group_setting.tag = \"field_report\"
+		and judge_group_setting.value = 1
+		order by judge_group.name
+	");
 
-	print TEXOUT <<"EOF";
+	my @judge_groups = Tab::JudgeGroup->search_field_reports($tourn->id);
 
-\\documentclass[10pt]{letter}
-\\usepackage{fullpage}
-\\usepackage[hmargin=1in,vmargin=1in]{geometry}
-\\usepackage{times}
-\\usepackage{multirow}
-\\renewcommand{\\arraystretch}{1.3}
-\\begin{document}
+	$judge_group = $judge_groups[0] unless $judge_group;
 
-\\addtolength{\\textwidth}{1in}
-\\addtolength{\\hoffset}{-.1in}
+    my $webpage = Tab::Webpage->search( tourn => $tourn_id, special => "fields")->first;
 
-EOF
+	my $switch;
 
-my $tourn_name = $tourn->name;
-$tourn_name =~ s/&/\\&/g;
-$tourn_name =~ s/#/\\#/g;
+    my $name = $tourn->name;
+    $name =~ s/[\W_]//g;
 
-	print TEXOUT "\\medskip\n";
-	print TEXOUT "\\begin{center}\n";
-	print TEXOUT "{\\LARGE Judge Paradigm List}";
-	print TEXOUT "\\end{center}\n";
+    my $filename = $name."-".$judge_group->abbr."-Paradigms-".$now->epoch;
+    my $filepath = $Tab::file_root."tmp/".$filename;
+    `rm -f $filepath.*`; 
 
+    $m->comp("/funclib/printout.mas", filename => $filename, head => 1 );
 
-	print TEXOUT "\\begin{tabular}{p{.75in}p{2.25in}p{.75in}p{2.25in}} \n  ";
-	print TEXOUT "{\\bf Tournament:} & ".$tourn_name."  (".$tourn->id.") & ";
-	print TEXOUT "{\\bf Printed:} & ". $now->mdy('/')." ".$now->hour_12.":".$now->strftime('%M')." ".$now->strftime('%p') ." \\\\ \n";
-	print TEXOUT "\\end{tabular}\n";
+	open (TEXOUT, ">>$filepath.tex");
 
-	print TEXOUT "\n\\bigskip\n\n";
+	print TEXOUT "\\hfill {\\LARGE ".Tab::texify($tourn->name)."}\n";
+	print TEXOUT "\\smallskip\n";
+	print TEXOUT "\\newline\n";
+	print TEXOUT "\\bigskip\n";
+	print TEXOUT "\\hfill {\\Large ".Tab::texify($judge_group->name)." judge paradigms }\n";
+	print TEXOUT "\\newline\n";
 
-    my @groups = $tourn->groups(ask_paradigm => 1);
+	foreach my $judge (sort {$a->last cmp $b->last} $judge_group->judges) { 
 
-	foreach my $group (sort {$a->name cmp $b->name} @groups) { 
+		next unless $judge->account && $judge->account->paradigm;
 
-		print TEXOUT "{\\large ".$group->name." Judges: }\\\\ \n";
-		print TEXOUT "\\bigskip\n";
+		my $paradigm = $judge->account->paradigm;
+		my $strip = HTML::Strip->new();
+		$paradigm = $strip->parse($paradigm);
+		$paradigm =~ s/[^[:ascii:]]//g;
+		$paradigm =~ s/^\s+//; 
+		$paradigm =~ s/\s+$//;
+		my $newline = "\\newline\n";
+		$paradigm = Tab::texify($paradigm);
+		$paradigm =~ s/\R/$newline/g;
 
-		foreach my $judge (sort {$a->last cmp $b->last} $group->judges) { 
+		print TEXOUT "\\begin{tabular}{p{2in}p{2.5in}p{2in}}\n";
 
-			next unless $judge->paradigm;
+		print TEXOUT "\\large ".$judge->last.", ".$judge->first." & ";
 
-			print TEXOUT "\\begin{tabular}{|p{1.5in}|p{4.5in}|}\n";
-			print TEXOUT "\\hline \n";
-
-			print TEXOUT $judge->last.", ".$judge->first." \\newline (";
-
-			if ($judge->school->id) { 
-				print TEXOUT $judge->school->name;
-			} else { 
-				print TEXOUT "Hired";
-			}
-
-
-			print TEXOUT ") & ".$judge->paradigm." \n";
-
-			print TEXOUT "\\\\ \\hline \n";
-			print TEXOUT "\\end{tabular}\n";
-			print TEXOUT "\\newline\n";
+		if ($judge->school->id) { 
+			print TEXOUT "\\large ".Tab::texify($judge->school->short_name);
+		} else { 
+			print TEXOUT "\\large Hired";
 		}
+
+		print TEXOUT " & ";
+
+		if ($judge->obligation || $judge->hired) { 
+			print TEXOUT "\\large ".($judge->obligation + $judge->hired)." rounds ";
+		}
+
+		print TEXOUT " \\\\ \\hline \n \\end{tabular}\n\\smallskip\\newline\n";
+		print TEXOUT "\\small\n\\onehalfspacing\n";
+		print TEXOUT $paradigm."\\bigskip\\newline\n";
 
 	}
 
@@ -90,11 +91,7 @@ $tourn_name =~ s/#/\\#/g;
 
 	close TEXOUT;
 
+    $m->comp("/funclib/printout.mas", filename => $filename, tail => 1 );
 
-$garbage = `cd $Tab::file_root/tmp; $Tab::latex_path $filename.tex; $Tab::dvipdfm_path $filename.dvi`;
-
-`rm -f $filename.tex $filename.log $filename.dvi $filename.aux`;
-
-$m->redirect("$Tab::url_prefix/tmp/paradigms-$tourn_id-".$now->epoch.".pdf");
 
 </%init>
