@@ -1160,9 +1160,10 @@ a.muted {
 }
 
 .paradigm { 
-	display : block;
-	padding : 10px;
-	margin  : auto;
+	display   : block;
+	padding   : 10px;
+	margin    : auto;
+	font-size : 14px !important;
 }
 
 .paradigm p { 
